Fixed the homepage not displaying overflow todos

--- a/frontend/src/Styles/Components/Utils/_container.scss
+++ b/frontend/src/Styles/Components/Utils/_container.scss
@@ -10,5 +10,10 @@
 
   &.home {
     height: calc(100vh - 3.75rem);
+
+    .small {
+      height: calc(100vh - 3.75rem - 1rem);
+      overflow-y: auto;
+    }
   }
 }
